trunk/Archive2/41/7488b973a667f1/output
main.cpp:8:6: warning: implicit declaration of function 'par_ou_impar' is invalid in C99 [-Wimplicit-function-declaration]
    *par_ou_impar(num);
     ^
main.cpp:8:5: error: indirection requires pointer operand ('int' invalid)
    *par_ou_impar(num);
    ^~~~~~~~~~~~~~~~~~
main.cpp:4:14: warning: unused parameter 'agrc' [-Wunused-parameter]
int main(int agrc, char* argv[])
             ^
main.cpp:13:7: error: conflicting types for 'par_ou_impar'
char *par_ou_impar(int aux)
      ^
main.cpp:8:6: note: previous implicit declaration is here
    *par_ou_impar(num);
     ^
main.cpp:16:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
3 warnings and 2 errors generated.
